default/objects/success__Achievement__c/success__Achievement__c.object-meta.xml
<CustomObject>
    <description>Base Behaviours define the first level of criteria that govern when a reward should be created. They also include the details of the reward that will be generated once the criteria are successfully achieved. These Base Behaviours are then used as Behaviours inside Collectives (Competitions, Experience Groups or Templates).</description>
    <label>Base Behaviour</label>
    <nameField>
        <label>Behaviour Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base Behaviours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>