default/objects/success__Achievement__c/fields/success__Action__c.field-meta.xml
<CustomField>
    <fullName>success__Action__c</fullName>
    <description>Specify when object records will be assessed as part of the Rewarding process</description>
    <inlineHelpText>Specify when object records will be assessed as part of the Rewarding process</inlineHelpText>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>