default/objects/success__Achievement__c/fields/success__Add_Nudge_To_Criteria__c.field-meta.xml
<CustomField>
    <fullName>success__Add_Nudge_To_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Add the criteria defined here to the Behaviour Criteria to ensure that the Nudge is displayed on applicable records</inlineHelpText>
    <label>Add to Behaviour Criteria</label>
    <type>Checkbox</type>
</CustomField>