default/objects/success__Achievement__c/fields/success__Apply_all_prior_steps__c.field-meta.xml
<CustomField>
    <fullName>success__Apply_all_prior_steps__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When used in Insight and Predict, this Behaviour can be completed in any Stage up until and including the Stage that is defined on the Winning Way Step</inlineHelpText>
    <label>Multi-Stage Behaviour</label>
    <type>Checkbox</type>
</CustomField>