default/objects/success__Achievement__c/fields/success__Archived__c.field-meta.xml
<CustomField>
    <fullName>success__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this base behaviour is archived or not</inlineHelpText>
    <label>DEPRECATED - Archived</label>
    <type>Checkbox</type>
</CustomField>