default/objects/success__Achievement__c/fields/success__Badge_Image__c.field-meta.xml
<CustomField>
    <fullName>success__Badge_Image__c</fullName>
    <formula>IMAGE( success__Badge_Type__r.success__Image_URL__c , &quot;Badge Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATE - Badge Image</label>
    <type>Text</type>
</CustomField>