default/objects/success__Achievement__c/fields/success__Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>success__Badge_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Badges are grouped, counted and reported by &#39;type&#39;</inlineHelpText>
    <label>Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>success__Graphic__c.success__Type__c</field>
            <operation>equals</operation>
            <value>Badge</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>success__Graphic__c</referenceTo>
    <relationshipLabel>Base Behaviours</relationshipLabel>
    <relationshipName>Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>