default/objects/success__Achievement__c/fields/success__Badge_URL__c.field-meta.xml
<CustomField>
    <fullName>success__Badge_URL__c</fullName>
    <formula>success__Badge_Type__r.success__Image_URL__c</formula>
    <label>DEPRECATE - Badge URL</label>
    <type>Text</type>
</CustomField>