default/objects/success__Achievement__c/fields/success__Business_Area_Override__c.field-meta.xml
<CustomField>
    <fullName>success__Business_Area_Override__c</fullName>
    <inlineHelpText>Override the object name that this Base Behaviour is based on in the UI</inlineHelpText>
    <label>Business Area Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>