default/objects/success__Achievement__c/fields/success__Category__c.field-meta.xml
<CustomField>
    <fullName>success__Category__c</fullName>
    <description>Allows for further categorisation of Base Behaviours for Insight and Reporting purposes</description>
    <inlineHelpText>Allows for further categorisation of Base Behaviours for Insight and Reporting purposes</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>