default/objects/success__Achievement__c/fields/success__Channel__c.field-meta.xml
<CustomField>
    <fullName>success__Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rewards earned for the behaviour will be broadcast on Inspire displays showing the specified channel</inlineHelpText>
    <label>DEPRECATE - Channel</label>
    <referenceTo>success__Channel__c</referenceTo>
    <relationshipLabel>Base Behaviours</relationshipLabel>
    <relationshipName>Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>