default/objects/success__Achievement__c/fields/success__Comments__c.field-meta.xml
<CustomField>
    <fullName>success__Comments__c</fullName>
    <inlineHelpText>Internal notes</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>