default/objects/success__Achievement__c/fields/success__Criteria_Logic__c.field-meta.xml
<CustomField>
    <fullName>success__Criteria_Logic__c</fullName>
    <description>Use the criteria numbers along with boolean operators &#39;AND&#39; and &#39;OR&#39; to define the statement, e.g. 1 AND (2 OR 3)</description>
    <inlineHelpText>Use the criteria numbers along with boolean operators &#39;AND&#39; and &#39;OR&#39; to define the statement, e.g. 1 AND (2 OR 3)</inlineHelpText>
    <label>Criteria Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>