default/objects/success__Achievement__c/fields/success__CRON_Expression__c.field-meta.xml
<CustomField>
    <fullName>success__CRON_Expression__c</fullName>
    <inlineHelpText>Define the frequency of when a Scheduled Behaviour is run</inlineHelpText>
    <label>CRON Expression</label>
    <length>64</length>
    <type>Text</type>
</CustomField>