default/objects/success__Achievement__c/fields/success__Description__c.field-meta.xml
<CustomField>
    <fullName>success__Description__c</fullName>
    <inlineHelpText>Visible to the player this field should be used to describe both the purpose of the base behaviour and the criteria required to earn the associated reward</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>