default/objects/success__Achievement__c/fields/success__Featured__c.field-meta.xml
<CustomField>
    <fullName>success__Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the behaviour to be highlighted i.e. &#39;promoted&#39; within the application.</description>
    <inlineHelpText>Promoted behaviours  will be highlighted as such across the application</inlineHelpText>
    <label>DEPRECATE - Promoted</label>
    <type>Checkbox</type>
</CustomField>