default/objects/success__Achievement__c/fields/success__Has_Custom_Query__c.field-meta.xml
<CustomField>
    <fullName>success__Has_Custom_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this record is using a custom query</description>
    <label>Has Custom Query</label>
    <type>Checkbox</type>
</CustomField>