default/objects/success__Achievement__c/fields/success__IsNegative__c.field-meta.xml
<CustomField>
    <fullName>success__IsNegative__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A negative base behaviour that is not desirable</inlineHelpText>
    <label>Undesirable</label>
    <type>Checkbox</type>
</CustomField>