default/objects/success__Achievement__c/fields/success__Maximum_number_of_rewards__c.field-meta.xml
<CustomField>
    <fullName>success__Maximum_number_of_rewards__c</fullName>
    <inlineHelpText>The maximum number of rewards the player is allowed to receive</inlineHelpText>
    <label>DEPRECATE - Max Rewards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>