default/objects/success__Achievement__c/fields/success__Minimum_hours_between_actions__c.field-meta.xml
<CustomField>
    <fullName>success__Minimum_hours_between_actions__c</fullName>
    <inlineHelpText>The minimum amount of time that must elapse before subsequent aggregate functions will be recognised</inlineHelpText>
    <label>DEPRECATE - Wait Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>