default/objects/success__Achievement__c/fields/success__Nudge_Criteria__c.field-meta.xml
<CustomField>
    <fullName>success__Nudge_Criteria__c</fullName>
    <label>Nudge Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>