default/objects/success__Achievement__c/fields/success__Object__c.field-meta.xml
<CustomField>
    <fullName>success__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>