default/objects/success__Achievement__c/fields/success__Pacing__c.field-meta.xml
<CustomField>
    <fullName>success__Pacing__c</fullName>
    <label>Pacing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Constant</fullName>
            </value>
            <value>
                <fullName>Front Loaded</fullName>
            </value>
            <value>
                <fullName>Back Loaded</fullName>
            </value>
            <value>
                <fullName>Late Push</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>