default/objects/success__Achievement__c/fields/success__Permit_multiple_rewards__c.field-meta.xml
<CustomField>
    <fullName>success__Permit_multiple_rewards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow the behaviour to create multiple rewards for any given record</description>
    <inlineHelpText>Allow the behaviour to create multiple rewards for any given record</inlineHelpText>
    <label>DEPRECATE - Multiple Rewards</label>
    <type>Checkbox</type>
</CustomField>