default/objects/success__Achievement__c/fields/success__Priority__c.field-meta.xml
<CustomField>
    <fullName>success__Priority__c</fullName>
    <description>Indicates the value of the behaviour</description>
    <inlineHelpText>Indicates the value of the behaviour</inlineHelpText>
    <label>Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>