default/objects/success__Achievement__c/fields/success__Query__c.field-meta.xml
<CustomField>
    <fullName>success__Query__c</fullName>
    <inlineHelpText>The query statement defines the scope of the object records that are returned for evaluation</inlineHelpText>
    <label>Query</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>