default/objects/success__Achievement__c/fields/success__Recipient__c.field-meta.xml
<CustomField>
    <fullName>success__Recipient__c</fullName>
    <inlineHelpText>Select who will receive the Reward that is generated when the Behaviour Criteria are fulfilled</inlineHelpText>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>