default/objects/success__Achievement__c/fields/success__Related_Record_Field__c.field-meta.xml
<CustomField>
    <fullName>success__Related_Record_Field__c</fullName>
    <inlineHelpText>Specify which related object&#39;s record ID should be populated on Insight records.</inlineHelpText>
    <label>Related Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>