default/objects/success__Achievement__c/fields/success__Repetition_Limit__c.field-meta.xml
<CustomField>
    <fullName>success__Repetition_Limit__c</fullName>
    <inlineHelpText>The maximum number of repetitions allowed to complete an aggregate (SUM) function</inlineHelpText>
    <label>Function Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>