default/objects/success__Achievement__c/fields/success__Repetition_Reward_Message__c.field-meta.xml
<CustomField>
    <fullName>success__Repetition_Reward_Message__c</fullName>
    <inlineHelpText>This message will be shown to the players whenever they view the repeat rewards generated from the achievement</inlineHelpText>
    <label>DEPRECATE - Reward Message (Repeat)</label>
    <type>TextArea</type>
</CustomField>