default/objects/success__Achievement__c/fields/success__Reward_Message__c.field-meta.xml
<CustomField>
    <fullName>success__Reward_Message__c</fullName>
    <inlineHelpText>This message will be shown to the player whenever they view the rewards generated from the behaviour</inlineHelpText>
    <label>DEPRECATE - Reward Message</label>
    <type>TextArea</type>
</CustomField>