default/objects/success__Achievement__c/fields/success__Status__c.field-meta.xml
<CustomField>
    <fullName>success__Status__c</fullName>
    <inlineHelpText>Describes the status of the Base Behaviour</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>