default/objects/success__Achievement__c/fields/success__SyntaxTree__c.field-meta.xml
<CustomField>
    <fullName>success__SyntaxTree__c</fullName>
    <label>Syntax Tree</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>