default/objects/success__Achievement__c/fields/success__Time_Limit_Unit__c.field-meta.xml
<CustomField>
    <fullName>success__Time_Limit_Unit__c</fullName>
    <inlineHelpText>The unit of time applied to the value entered in &#39;Time Limit&#39;</inlineHelpText>
    <label>Time Limit Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>days</fullName>
            </value>
            <value>
                <fullName>weeks</fullName>
            </value>
            <value>
                <fullName>months</fullName>
            </value>
            <value>
                <fullName>quarters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>