default/objects/success__Achievement__c/fields/success__Tracked_Field__c.field-meta.xml
<CustomField>
    <fullName>success__Tracked_Field__c</fullName>
    <description>Specifies which field to track</description>
    <inlineHelpText>The value of this field will be copied from the Parent record to the Observation record</inlineHelpText>
    <label>Tracked Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>