default/objects/success__Achievement__c/recordTypes/success__One_Off.recordType-meta.xml
<RecordType>
    <fullName>success__One_Off</fullName>
    <active>true</active>
    <description>A base behaviour that is assessed (and rewarded) in real time</description>
    <label>One-Off</label>
</RecordType>