default/objects/success__Achievement__c/recordTypes/success__Recurring.recordType-meta.xml
<RecordType>
    <fullName>success__Recurring</fullName>
    <active>true</active>
    <description>A base behaviour that is assessed after each occurrence and on completion</description>
    <label>Recurring</label>
</RecordType>