default/objects/success__Achievement__c/recordTypes/success__Scheduled.recordType-meta.xml
<RecordType>
    <fullName>success__Scheduled</fullName>
    <active>true</active>
    <description>A base behaviour that is assessed (and rewarded) on a scheduled basis</description>
    <label>Scheduled</label>
</RecordType>