default/objects/success__Achievement__c/validationRules/success__badge_name_and_type_are_dependent.validationRule-meta.xml
<ValidationRule>
    <fullName>success__badge_name_and_type_are_dependent</fullName>
    <active>true</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Badge name and Badge Type fields must either both be populated or both be empty</errorMessage>
</ValidationRule>