default/objects/success__Achievement__c/validationRules/success__If_Number_of_occurrences_then_aggregate.validationRule-meta.xml
<ValidationRule>
    <fullName>success__If_Number_of_occurrences_then_aggregate</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(   success__Repetition_Limit__c   )) &amp;&amp; ISBLANK(  success__Aggregate_Field__c)</errorConditionFormula>
    <errorMessage>If aggregate rewarding is required, an Aggregate Function and a Function Value must both be specified.</errorMessage>
</ValidationRule>