default/objects/success__Achievement__c/validationRules/success__If_Time_Limit_then_Unit_of_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>success__If_Time_Limit_then_Unit_of_Time</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(  success__Time_limit_in_days__c  ),NOT(ISPICKVAL( success__Time_Limit_Unit__c , &#39;&#39;)), ISPICKVAL( success__Time_Limit_Unit__c , &#39;&#39;))</errorConditionFormula>
    <errorMessage>If a Time Limit is required, then both a value and a period must be specified.</errorMessage>
</ValidationRule>