default/objects/success__Achievement__c/validationRules/success__If_Wait_Time_then_Unit_of_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>success__If_Wait_Time_then_Unit_of_Time</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK( success__Minimum_hours_between_actions__c ), NOT(ISPICKVAL(success__Minimum_time_unit__c, &#39;&#39;)), ISPICKVAL(success__Minimum_time_unit__c, &#39;&#39;))</errorConditionFormula>
    <errorMessage>If a Wait Time is required, then both a value and a period must be specified.</errorMessage>
</ValidationRule>