default/objects/success__Achievement__c/validationRules/success__Must_not_exceed_998.validationRule-meta.xml
<ValidationRule>
    <fullName>success__Must_not_exceed_998</fullName>
    <active>true</active>
    <errorConditionFormula>success__Maximum_number_of_rewards__c &gt; 998</errorConditionFormula>
    <errorMessage>The maximum number of rewards that can be set is  998</errorMessage>
</ValidationRule>