default/objects/success__Achievement__c/validationRules/success__Recipient_required.validationRule-meta.xml
<ValidationRule>
    <fullName>success__Recipient_required</fullName>
    <active>true</active>
    <description>Recipient is required for standard behaviours.</description>
    <errorConditionFormula>and(isblank(success__Recipient__c), isblank(success__Query__c), not(RecordTypeId = &#39;Scheduled&#39;))</errorConditionFormula>
    <errorMessage>Recipient is required</errorMessage>
</ValidationRule>