default/objects/success__Achievement__c/validationRules/success__reward_message_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>success__reward_message_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(success__Reward_Message__c)</errorConditionFormula>
    <errorDisplayField>success__Reward_Message__c</errorDisplayField>
    <errorMessage>Required Field</errorMessage>
</ValidationRule>