default/objects/success__Achievement__c/listViews/success__All_Testing.listView-meta.xml
<ListView>
    <fullName>success__All_Testing</fullName>
    <columns>NAME</columns>
    <columns>success__Functional_Area__c</columns>
    <columns>success__Description__c</columns>
    <columns>success__Badge_Type__c</columns>
    <columns>success__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>success__Status__c</field>
        <operation>equals</operation>
        <value>Testing</value>
    </filters>
    <label>All - Testing</label>
    <language>en_US</language>
</ListView>