default/objects/success__Achievement__c/listViews/success__Campaign_Achievements.listView-meta.xml
<ListView>
    <fullName>success__Campaign_Achievements</fullName>
    <columns>NAME</columns>
    <columns>success__Description__c</columns>
    <columns>success__Experience_Formula__c</columns>
    <columns>success__Badge_Type__c</columns>
    <columns>success__Badge_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>success__Functional_Area__c</field>
        <operation>equals</operation>
        <value>Campaign</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>success__Achievement__c.success__One_Off</value>
    </filters>
    <label>Campaigns</label>
    <language>en_US</language>
</ListView>