default/objects/success__Achievement__c/listViews/success__Customer_Retention.listView-meta.xml
<ListView>
    <fullName>success__Customer_Retention</fullName>
    <columns>NAME</columns>
    <columns>success__Functional_Area__c</columns>
    <columns>success__Description__c</columns>
    <columns>success__Badge_Type__c</columns>
    <columns>success__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>success__Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>All - Inactive</label>
    <language>en_US</language>
</ListView>